Fix color contrast

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,4 +1,5 @@
 header {
+  background-color: black;
   background:linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), asset-url("thomas-habr-6NmnrAJPq7M-unsplash.jpg");
   background-size: 100% 170%;
   padding: 0;
